--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </div>
                 </div>
                 <div class="tech-category" data-category="frontend" style="display: none;">
-                    <h3>Frontend (диспетчерская)</h3>
+                    <h3>Frontend</h3>
                     <div class="tech-list">
                         <div class="tech-item">React</div>
                         <div class="tech-item">Leaflet</div>
@@ -443,4 +443,5 @@
         });
     </script>
 </body>
+
 </html>
