--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </button>
                     
                     <div class="png-container" id="mainImage">
-                        <img src="img\fairy_rock.png" alt="Drone Map">
+                        <img src="img\map_dron.gif" alt="Drone Map">
                     </div>
                     <div class="gif-container" id="gifContainer">
                         <img src="img\1.gif" alt="Drone GIF">
@@ -776,3 +776,4 @@
     </script>
 </body>
 </html>
+
