--- a/index.html
+++ b/index.html
@@ -335,21 +335,13 @@
                                         Надежная и производительная реляционная база данных, в которой мы храним и структурируем всю критически важную информацию
                                     </p>
                             </div>
-                        </div>    
-                        <div class="right-column-top">
-                            <div class="card">
-                                <h3 class="card-title">Облачный хостинг</h3>
-                                <p class="card-content">
-                                        Обеспечивает гибкость и масштабируемость. Мы можем быстро увеличить мощности в пиковые нагрузки и снизить затраты в спокойные периоды
-                                    </p>
-                            </div>
                             <div class="card">
                                 <h3 class="card-title">Локальный сервер</h3>
                                 <p class="card-content">
                                          Используется для тестирования, разработки и развертывания решений, требующих максимальной безопасности и минимальной задержки в пределах локальной сети
                                     </p>
                             </div>
-                        </div>
+                        </div>    
                     </div>
                 </div>
 
@@ -358,7 +350,7 @@
                         <div class="right-column-top">
 
                             <div class="card">
-                                <h3 class="card-title">Камеры</h3>
+                                <h3 class="card-title">Камеры 2K с оптикой</h3>
                                 <p class="card-content">
                                          Источники видеопотоков высокого разрешения, которые являются "глазами" системы
                                     </p>
@@ -378,9 +370,15 @@
                                     </p>
                             </div>
                             <div class="card">
-                                <h3 class="card-title">GPU-ускорители</h3>
+                                <h3 class="card-title">Источник бесперебойного питания</h3>
                                 <p class="card-content">
-                                         Высокопроизводительные видеокарты для серверов. Мы используем их для тренировки сложных нейросетевых моделей и для обработки больших объемов видео в реальном времени в облаке
+                                         Надёжное автономное питание для критически важных систем: обеспечивает стабильную работу оборудования при отключении электросети и защищает от скачков напряжения
+                                    </p>
+                            </div>
+                            <div class="card">
+                                <h3 class="card-title">4G/5G модем + антенна</h3>
+                                <p class="card-content">
+                                         Высокоскоростной мобильный интернет в любых условиях: стабильное подключение даже в удалённых или труднодоступных локациях благодаря усиленному приёму сигнала и поддержке современных стандартов связи
                                     </p>
                             </div>
                         </div>
